--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ anyhow = "1.0"
 tui = "0.19"
 crossterm = "0.25"
 chrono = "0.4.26"
+schematic = { version = "0.11.0", features = ["toml"] }
+serde = "1.0.176"
+envpath = "0.0.1-beta.3"
