--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ chrono = "0.4.26"
 schematic = { version = "0.11.0", features = ["toml"] }
 serde = "1.0.176"
 envpath = "0.0.1-beta.3"
+async-trait = "0.1.72"
